# mcpscan

./: .clawmetry-fleet.db  .clawmetry-metrics.json  AGENTS.md  CHANGELOG.md  HEARTBEAT.md  LICENSE  MEMORY.md  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  TOOLS.md  WORKQUEUE.md  pyproject.toml
.clawhub/: lock.json
.github/workflows/: publish.yml
.learnings/: ERRORS.md  LEARNINGS.md
.openclaw/: workspace-state.json
config/: mcporter.json
configs/: process-baseline.json
content/drafts/: producthunt-mcpscan.md  social-profiles.md
data/: credentials.json  health-history.json
docs/: PROJECT-SUMMARY.md  archived-bots.md  email-dashboard-20260314.md  forge-fixes-20260314.md  freqtrade-backtest-results.md  freqtrade-deep-optimisation-20260314.md  freqtrade-ml-strategies-20260315.md  freqtrade-quant-research-20260315.md  freqtrade-strategy-research-20260315.md  hmrc-advisor-test-20260314.md  infra-hardening-20260314.md  lora-training-setup-20260314.md  lora-training-status-20260314.md  port-hardening-20260314.md  pypi-publish-steps.md  security-sweep-20260314.md  taskmaster-blockers-20260314.md
logs/: self-healer.err
memory/: 2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21-moss-agents.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  blog-digest.md  cron-log.md  crowdsec-daily.md  crypto-history.csv  evolution-log.md  gpu-maintenance-log.md  heartbeat-state.json  hmrc-deploy-result.md  market-summary.md  openclaw-research-log.md  process-audit-log.md  security-log.md  subagent-bull-strategy-20260314.md  subagent-freqtrade-check-20260314.md  subagent-lora-check-20260314.md  subagent-vercel-check-20260314.md  tools-research-log.md  web-monitor-log.md  weekly-audit-log.md
memory/improvements/: 2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  IMPROVEMENT-TRACKER.md
projects/: fyzi-dns-baseline.json
projects/TAYoutube/: BRAND.md  CONTENT-STRATEGY.md  GROWTH-PLAN.md  PRODUCTION-GUIDE.md  README.md
projects/dashchat/: .env
projects/email-classifier-dashboard/: package-lock.json  package.json
projects/energy-app/: APP_STORE_METADATA.md  PROJECT_PLAN.md
research/: mindfizz-competitor-positioning.md
scripts/: backup-openclaw.sh  backup.sh  civitai-download.sh  crypto-alert.sh  crypto-history-log.sh  financial-summary.sh  git-sync.sh  jarvis-tts.py  print-asn-labels.py  process-audit.sh  restore-openclaw.sh  setup-autoresearch.sh  weekly-audit.md
tests/: test_checks.py  test_diff.py  test_html_reporter.py  test_json_reporter.py
(+285 files in other folders)
